@@ -1,0 +1,2 @@
+language: c
+script: bash -ex .travis-ci.sh
